A minor typo fix

--- a/2024-05-30-lambda-in-python.org
+++ b/2024-05-30-lambda-in-python.org
@@ -1,7 +1,7 @@
 #+BEGIN_EXPORT html
 ---
 layout: page
-title: Lamda Function
+title: Lambda Function
 tagline: " is a tiny and efficient"
 permalink: /fundamentals/python/lambda.html
 categories: [Python, Literate Programming]
